# react-native-cxx-turbomodule

./: CONTRIBUTING.md  README.md  buildServer.json  mprocs.yaml  package.json  react-native-cxx-turbomodule.podspec  react-native.config.js  tsconfig.json
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/cxxturbomodule/: CxxTurbomoduleModule.kt  CxxTurbomodulePackage.kt
cpp/: CMakeLists.txt  CxxTurboModule.cpp  CxxTurboModule.hpp  CxxTurbomodule.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/cxxturbomoduleexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/jni/: CMakeLists  CMakeLists.txt  OnLoad  OnLoad.cpp
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/CxxTurbomoduleExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/CxxTurbomoduleExample.xcodeproj/: project.pbxproj
example/ios/CxxTurbomoduleExample.xcodeproj/xcshareddata/xcschemes/: CxxTurbomoduleExample.xcscheme
example/ios/CxxTurbomoduleExample.xcworkspace/: contents.xcworkspacedata
example/ios/CxxTurbomoduleExampleTests/: CxxTurbomoduleExampleTests.m
example/src/: App.tsx
ios/: CxxTurbomodule.h  CxxTurbomodule.mm  OnLoad.mm
scripts/: generate-codegen-specs.cjs
src/: NativeCxxTurbomodule.ts  index.tsx
